--- a/src/main/resources/templates/add-profile.html
+++ b/src/main/resources/templates/add-profile.html
@@ -13,10 +13,12 @@
 
 <body>
 
-<div class="container my-5">
-    <h1>Pota</h1>
+<div class="container">
+    <h3>Your account has been hacked...</h3>
+    <p><i class="fa fa-github-alt fa-5x"></i></p>
+    <h1>404</h1>
+    <p><a class="btn btn-warning btn-lg" href="/" title="HOME">Go Back</a></p>
 </div>
-
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
