--- a/src/main/resources/templates/add-profile.html
+++ b/src/main/resources/templates/add-profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-
-    <div><h1>I love you yobab!!!</h1></div>
-
 
     <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
