--- a/src/main/resources/templates/create-update-profile.html
+++ b/src/main/resources/templates/create-update-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Errolito Lopez Resume</title>
+    <title>Create/Update Profile Screen</title>
 
     <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/main.css}" />
