--- a/src/main/resources/templates/create-update-profile.html
+++ b/src/main/resources/templates/create-update-profile.html
@@ -5,14 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create/Update Profile Screen</title>
-
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
+    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
 </head>
 
 <body>
 
-    <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
-</body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <form th:action="@{/profile}" th:object="${profileForm}" method="POST">
+                        <div class="form-group">
+                            <label for="firstName">First Name</label>
+                            <input type="text" name="firstName" id="firstName" th:field="*{firstName}"
+                                   class="form-control" placeholder="First Name">
+                            <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
+                                  class="text-danger"></span>
+                        </div>
 
+                        <div class="form-group">
+                            <label for="middleName">Middle Name</label>
+                            <input type="text" name="middleName" id="middleName" th:field="*{middleName}"
+                                   class="form-control"
+                                   placeholder="Middle Name">
+                            <span th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}"
+                                  class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" name="lastName" id="lastName" th:field="*{lastName}" class="form-control"
+                                   placeholder="Last Name">
+                            <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+                                  class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="role">Role</label>
+                            <input type="text" name="role" id="role" th:field="*{role}" class="form-control"
+                                   placeholder="Role">
+                            <span th:if="${#fields.hasErrors('role')}" th:errors="*{role}"
+                                  class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="objective">Objective</label>
+                            <textarea name="objective" id="objective" th:field="*{objective}" class="form-control"
+                                      rows="3"></textarea>
+                            <span th:if="${#fields.hasErrors('objective')}" th:errors="*{objective}"
+                                  class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 mt-5"></div>
+    </div>
+</div>
+<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
+</body>
 </html>
