--- a/src/main/resources/templates/view-profile.html
+++ b/src/main/resources/templates/view-profile.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Profile Screen</title>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
 </head>
+
 <body>
+
+<div class="container">
+
+    <img src="../static/images/2x2.jpg" th:src="@{images/2x2.jpg}"/>
 
     <tr th:each="obj : ${profile}">
         <td th:text="${profile.firstName}"></td>
     </tr>
 
-    <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
+
+</div>
+<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
+
 </html>
